<?xml version="1.0"?>
<package>
  <name>teleop_vehicle_joy</name>
  <version>0.1.2</version>
  <description>Generic joystick teleop for robots like a vehicle.</description>
  <maintainer email="windnbike@qq.com">WindnBike</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teleop_vehicle_joy</url>
  <author email="windnbike@qq.com">WindnBike</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
